Fix modal being behind nav bar

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -26,6 +26,10 @@
     height: calc(100% - 120px);
 }
 
+.moosicbox-modal-container {
+    z-index: 11;
+}
+
 .moosicbox-modal {
     position: fixed;
     left: 50%;
